packages/libs/error-stack/tests/snapshots/test_debug__provider@glyph.snap
---
source: tests/test_debug.rs
expression: "redact(&format!(\"{report:?}\"))"
---
Root error
├╴tests/common.rs:147:5
╰╴Printable A

Root error
├╴tests/common.rs:147:5
├╴Test
├╴Printable B
╰╴1 additional attachment

Root error
├╴tests/common.rs:147:5
├╴Test
├╴Printable B
├╴ABC
╰╴2 additional attachments
