packages/libs/error-stack/tests/snapshots/test_debug__provider_ext@backtrace.snap
---
source: tests/test_debug.rs
expression: "redact(&format!(\"{report:#?}\"))"
---
Printable A
| @ tests/test_debug.rs:196:38
|-> Root error
|   > @ tests/common.rs:140:5
\-> backtrace with [n] frames (1)
    > @ tests/common.rs:140:5

Test
| @ tests/test_debug.rs:207:39
|-> 1 additional attachment
|-> Printable B
|   | @ tests/test_debug.rs:198:42
|   |-> Root error
|   |   > @ tests/common.rs:140:5
|   \-> backtrace with [n] frames (2)
|       > @ tests/common.rs:140:5
\-> Printable B
    | @ tests/test_debug.rs:204:18
    |-> ABC
    |   > @ tests/test_debug.rs:202:18
    |-> Root error
    |   > @ tests/common.rs:140:5
    |-> backtrace with [n] frames (3)
    |   > @ tests/common.rs:140:5
    \-> 1 additional attachment


━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

Backtrace No. 1
   [redacted]

Backtrace No. 2
   [redacted]

Backtrace No. 3
   [redacted]
